<?xml version="1.0"?>
<package format="2">
  <name>usb_cam</name>
  <version>0.3.6</version>
  <description>A ROS Driver for V4L USB Cameras</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/bosch-ros-pkg/usb_cam/issues</url>
  <url type="repository">https://github.com/bosch-ros-pkg/usb_cam</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>camera_info_manager</depend>
  <depend>ffmpeg</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>v4l-utils</exec_depend>
</package>
